[tool.poetry]
name = "prometheus-ping"
version = "0.1.1"
description = "Measure ping between locations and report it as Prometheus metrics"
authors = ["Remi Rampin <remi@rampin.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
